# BHL2022

./: 3. feature explanation.ipynb  EDA_Kolumn.ipynb  Hubert's analysis.ipynb  Pipeline.ipynb  Pipeline_big.ipynb  Pipeline_smol.ipynb  README.md  README.org  big_pipeline.pkl  clusters.csv  pred_big.csv  pred_smol.csv  pyproject.toml  test.csv
dataset/: train_data.csv
