[tool.poetry]
name = "hackathon-bootstrap"
version = "0.0.1"
description = "Hackathon template for KNMLPRz"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
scikit-learn = "^0.23.2"
seaborn = "^0.11.2"
torch = "^1.11.0"
torchvision = "^0.12.0"
torchaudio = "^0.11.0"
opencv-python = "^4.5.5"
xgboost = "^1.5.2"
lightgbm = "^3.3.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
jupyterlab = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
